@startuml application_class_diagram

title Application: Class Diagram

legend top left
    |= Color         |= Description              |
    | <#LightCyan>   | TimeDaemon members        |
    | <#PaleTurquoise> | MessageBroker           |
    | <#Wheat>       | PtpMachine                |
    | <#LightBlue>   | ControlFlowDivider        |
    | <#Lavender>    | VerificationMachine       |
    | <#LightPink>   | IPC components            |
endlegend

class "TimeDaemon" as vtd_app #LightCyan {
    +std::int32_t Initialize(const ApplicationContext& context) override
    +std::int32_t Run(score::cpp::stop_token& token) override
}

class "TimebaseHandler" as tb_handler #LightCyan{
    +void Initialize()
    +void RunOnce(stop_token&)
    +void Stop()
}
note right
    There might be multiple TimebaseHandlers
    based on amount of supported time bases.
end note

class "MessageBroker" as msg_broker #PaleTurquoise
class "PtpMachine" as ptp_machine #Wheat
class "VerificationMachine" as ver_machine #Lavender
class "ControlFlowDivider" as cf_divider #LightBlue
class "IpcPublisher" as ipc_publisher #LightPink

vtd_app *-- "1..*" tb_handler : owns

tb_handler *-- msg_broker : owns
tb_handler *-- ptp_machine : owns
tb_handler *-- ver_machine : owns
tb_handler *-- cf_divider : owns
tb_handler *-- ipc_publisher : owns

@enduml
